# pb_analyzer

./: README.md  config.ini.template  pyproject.toml
src/pb_analyzer/: __init__.py  __main__.py  __version__.py  client.py  mail.py
src/pb_analyzer/configuration/: __init__.py
src/pb_analyzer/configuration/templates/: config.ini.template
src/pb_analyzer/persistence/: __init__.py  actions.py  models.py
