[project]
name = "pb_analyzer"
dynamic = ["version"]
dependencies = [
    "requests>=2.28",
    "loguru~=0.6.0",
    "sqlalchemy~=1.4",
    "urllib3>=1.26",
    "appdirs>=1.4.4",
]
requires-python = ">=3.9"

[project.scripts]
pb_analyzer = "pb_analyzer.__main__:main"

[tool.pdm.version]
source = "scm"
write_to = "pb_analyzer/__version__.py"
write_template = "__version__ = '{}'"  # optional, default to "{}"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
